--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "ts-datapacks",
   "module": "index.ts",
-  "bin": "bin/",
+  "bin": {
+    "tsmc": "bin/tsmc.ts"
+  },
   "type": "module",
   "version": "0.1.0",
   "devDependencies": {
